--- a/webapp/src/app/pages/home/note2/note2.component.html
+++ b/webapp/src/app/pages/home/note2/note2.component.html
@@ -43,7 +43,7 @@
 				</ul>
 			</nz-dropdown-menu>
 
-			<div style="flex-grow: 1;" [id]="node.key" style="">
+			<div style="flex-grow: 1;" [id]="node.key">
 				<div
 					[hidden]="editId === node.key"
 					style="
