--- a/webapp/src/app/login/login.component.html
+++ b/webapp/src/app/login/login.component.html
@@ -3,7 +3,7 @@
 		webapp
 	</div>
 </div>
-<div [ngClass]="{ box: translate }">
+<div [ngClass]="{ 'box': translate }">
 	<div class="login-box front">
 		<div class="title">用户登录 / User Login</div>
 		<form #userForm="ngForm" class="example-form">
