--- a/webapp/src/app/pages/home/note/note.component.html
+++ b/webapp/src/app/pages/home/note/note.component.html
@@ -12,7 +12,7 @@
     </span>
         <nz-dropdown-menu #menu2="nzDropdownMenu">
             <ul nz-menu>
-                <li style="width: 80px" nz-menu-item> {{user.username ? user.username : '游客'}}</li>
+                <li style="width: 80px" nz-menu-item> {{user.userName ? user.userName : '游客'}}</li>
                 <li style="width: 80px" nz-menu-item (click)="logout()"> 退出</li>
             </ul>
         </nz-dropdown-menu>
