--- a/webapp/src/app/pages/home/note2/note2.component.html
+++ b/webapp/src/app/pages/home/note2/note2.component.html
@@ -4,7 +4,7 @@
         新建文件夹
     </button>
     <nz-spin [nzSpinning]="isSpinning" style="height:100% ">
-        <nz-empty [nzNotFoundContent]="'暂无数据'" style="margin-top: 48px" *ngIf="!nodes.length"></nz-empty>
+        <nz-empty [nzNotFoundContent]="'暂无数据'" style="margin-top: 48px" *ngIf="!nodes?.length"></nz-empty>
         <nz-tree
             #nzTree
             nzBlockNode
