fix add folder and edit folder name : wrong attr names fixed

--- a/webapp/src/app/pages/home/note2/note2.component.html
+++ b/webapp/src/app/pages/home/note2/note2.component.html
@@ -79,7 +79,7 @@
         <nz-form-item>
             <nz-form-label [nzSpan]="5">名称</nz-form-label>
             <nz-form-control nzHasFeedback [nzSpan]="12" nzErrorTip="名称不能为空">
-                <input nz-input [(ngModel)]="addFileItem.name" name="required" required/>
+                <input nz-input [(ngModel)]="addFileItem.menuName" name="required" required/>
             </nz-form-control>
         </nz-form-item>
     </form>
