--- a/webapp/src/app/pages/home/note/note.component.html
+++ b/webapp/src/app/pages/home/note/note.component.html
@@ -1,15 +1,26 @@
 <nz-layout style="height: 100%">
     <nz-header style="background-color: #fff;display: flex;justify-content: space-between">
-   <span>
-     网络记事本
-   </span>
-        <span>
-      <nz-button-group>
-      <button nz-button nz-dropdown [nzDropdownMenu]="menu2" nzPlacement="bottomRight">
-        <i nz-icon nzType="user"></i>
-      </button>
-    </nz-button-group>
+<div nz-row>
+
+    <span nz-col>
+        <nz-button-group>
+            <button nz-button nz-dropdown [nzDropdownMenu]="menu2" nzPlacement="bottomLeft">
+                <i nz-icon nzType="user"></i>
+            </button>
+        </nz-button-group>
     </span>
+    <span nz-col style="margin-left: 20px;">
+    <a nz-button nzType="link" routerLink="/login/doregister">sign up</a>
+    </span>
+    <span nz-col style="margin-left: 20px;">
+    <a nz-button nzType="link" routerLink="/login/dologin">log in</a>
+    </span>
+    <span nz-col style="margin-left: 20px;">
+        network notepad
+    </span>
+</div>
+
+
         <nz-dropdown-menu #menu2="nzDropdownMenu">
             <ul nz-menu>
                 <li style="width: 80px" nz-menu-item> {{user.userName ? user.userName : '游客'}}</li>
@@ -28,41 +39,41 @@
             <div class="example-container flex" style="justify-content: space-between;
       flex-direction: column;height: 100%;display: flex;padding:0 24px;">
                 <nz-spin [nzSpinning]="isSpinning" style="flex-grow: 1;overflow-y: scroll">
-                            <nz-empty [nzNotFoundContent]="'暂无数据'" style="margin-top: 98px" *ngIf="!done.length"></nz-empty>
-                            <div
-                                    style="margin: 16px 0;"
-                                    cdkDropList
-                                    #doneList="cdkDropList"
-                                    [cdkDropListData]="done"
-                                    (cdkDropListDropped)="drop($event)">
-                                <div class="example-box" [class.box-active]="item.active"
-                                     *ngFor="let item of done;let i = index;" #dragEl cdkDrag
-                                     [cdkDragData]="item" (contextmenu)="contextMenu($event, menu,item)"
-                                     (cdkDragStarted)="dragStarted(item,i,dragEl)"
-                                >
-                                    <nz-dropdown-menu #menu="nzDropdownMenu">
-                                        <ul nz-menu>
-<!--                                            <li nz-menu-item (click)="copy(item)" class="dropdownMenu">复制</li>-->
-                                            <li nz-menu-item (click)="cut(item)" class="dropdownMenu">剪切</li>
-                                            <!--                                    <li nz-menu-item  (click)="paste(item)" class="dropdownMenu">粘贴</li>-->
-                                        </ul>
-                                    </nz-dropdown-menu>
-                                    <div [hidden]="editId === item.id"
-                                         style="display: flex;justify-content: space-between;align-items: center;">
-                                        <span style="flex-grow: 1;">{{item.content}}</span>
-                                        <a class="custom-node-icon" nz-button nzType="link" nzGhost
-                                           (click)="startEdit(item.id)">
-                                            <i nz-icon nzType="edit" nzTheme="outline"></i>
-                                        </a>
-                                        <a class="custom-node-icon" nz-button nzType="link" nzGhost (click)="delItem(item)">
-                                            <i nz-icon nzType="delete" nzTheme="outline"></i>
-                                        </a>
-                                    </div>
-                                    <input [hidden]="editId !== item.id" type="text" nz-input [(ngModel)]="item.content"
-                                           (blur)="stopEdit(item)"/>
-
-                                </div>
+                    <nz-empty [nzNotFoundContent]="'暂无数据'" style="margin-top: 98px" *ngIf="!done.length"></nz-empty>
+                    <div
+                            style="margin: 16px 0;"
+                            cdkDropList
+                            #doneList="cdkDropList"
+                            [cdkDropListData]="done"
+                            (cdkDropListDropped)="drop($event)">
+                        <div class="example-box" [class.box-active]="item.active"
+                             *ngFor="let item of done;let i = index;" #dragEl cdkDrag
+                             [cdkDragData]="item" (contextmenu)="contextMenu($event, menu,item)"
+                             (cdkDragStarted)="dragStarted(item,i,dragEl)"
+                        >
+                            <nz-dropdown-menu #menu="nzDropdownMenu">
+                                <ul nz-menu>
+                                    <!--                                            <li nz-menu-item (click)="copy(item)" class="dropdownMenu">复制</li>-->
+                                    <li nz-menu-item (click)="cut(item)" class="dropdownMenu">剪切</li>
+                                    <!--                                    <li nz-menu-item  (click)="paste(item)" class="dropdownMenu">粘贴</li>-->
+                                </ul>
+                            </nz-dropdown-menu>
+                            <div [hidden]="editId === item.id"
+                                 style="display: flex;justify-content: space-between;align-items: center;">
+                                <span style="flex-grow: 1;">{{item.content}}</span>
+                                <a class="custom-node-icon" nz-button nzType="link" nzGhost
+                                   (click)="startEdit(item.id)">
+                                    <i nz-icon nzType="edit" nzTheme="outline"></i>
+                                </a>
+                                <a class="custom-node-icon" nz-button nzType="link" nzGhost (click)="delItem(item)">
+                                    <i nz-icon nzType="delete" nzTheme="outline"></i>
+                                </a>
                             </div>
+                            <input [hidden]="editId !== item.id" type="text" nz-input [(ngModel)]="item.content"
+                                   (blur)="stopEdit(item)"/>
+
+                        </div>
+                    </div>
                 </nz-spin>
                 <div style="height: 60px;margin: 12px 0">
                     <mat-form-field style="width: 100%;">
